--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             console.log('BRUTE')
             bruteForce.initAlgorithm(edges);
             bruteForce.waySolution(from, to);
+            changeColor(bruteForce);
         }
 
         function bruteStepByStep(from, to) {
