--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             AStar.fScore[from] = AStar.h(from, to);
 
             let timerId = setTimeout(function tick() {
+                
                 let current = AStar.minH(AStar.openSet, to)
 
                 AStar.deadNodes.push(current);
@@ -156,6 +157,7 @@
                 AStar.closeSet.push(current)
                 changeColor(AStar)
                 timerId = setTimeout(tick, 1500);
+                if(AStar.openSet.length === 0) clearTimeout(timerId)
             }, 1500)
         }
 
